Add JS for Neo4j, then commented out

--- a/Churn.html
+++ b/Churn.html
@@ -5,7 +5,7 @@
 <body>
   <!--{{> hello}}-->
   {{> mongo}}
-  {{> neo4j}}
+  <!--{{> neo4j}}-->
 </body>
 
 
@@ -35,7 +35,7 @@
 </template>
 
 
-<!-- NEO4J -->
+<!-- NEO4J - ->
 <template name="neo4j">
   Master:
   <select id="neomaster">
@@ -58,3 +58,4 @@
 <template name="neoslave">
   <option value="{{name}}">{{name}}</option>
 </template>
+-->
