Broken and all commented out

--- a/Churn.html
+++ b/Churn.html
@@ -4,8 +4,10 @@
 
 <body>
   <!--{{> hello}}-->
+  <h1>MONGO</h1>
   {{> mongo}}
-  <!--{{> neo4j}}-->
+  <!--h2>NEO4J</h2>
+  {{> neo4j}}-->
 </body>
 
 
@@ -35,7 +37,7 @@
 </template>
 
 
-<!-- NEO4J - ->
+<!-- NEO4J -->
 <template name="neo4j">
   Master:
   <select id="neomaster">
@@ -58,4 +60,3 @@
 <template name="neoslave">
   <option value="{{name}}">{{name}}</option>
 </template>
--->
